--- a/challenge_3/public/styles.css
+++ b/challenge_3/public/styles.css
@@ -38,3 +38,14 @@
   min-height: 20px;
   min-width: 20px;
 }
+
+.row.1 {
+  margin-left: 30px;
+}
+
+
+img {
+  width: 300px;
+  height: auto;
+  padding-left: 150px;
+}
